# little_logger

./: .git-blame-ignore-revs  .gitignore  .ocamlformat  CHANGELOG.md  Makefile  README.md  dune-project  little_logger.opam
.github/workflows/: build_and_test.yml  generate_docs.yml
bench/: README.md
docs/: index.html
docs/little_logger/: index.html
docs/little_logger/Little_logger/: index.html
docs/little_logger/Little_logger/Logger/: index.html
docs/little_logger/Little_logger/Logger/Level/: index.html
docs/little_logger/Little_logger/Time_convert/: index.html
docs/little_logger/Little_logger__Logger/: index.html
docs/little_logger/Little_logger__Time_convert/: index.html
lib/: dune  logger.ml  logger.mli  time_convert.ml
test/: dune  test_logger.ml  test_logger_async.ml
test/async/: dune
